<resources>
    <string name="app_name">Proyek 1 Nurhafidzah</string>

    <string name="nama">Nurhafidzah Salsabila</string>
    <string name="nim">232010051</string>
    <string name="fakultas">Pendidikan MIPA dan Teknologi</string>
    <string-array name="prodi">
        <item>Pendidikan Matematika</item>
        <item>Pendidikan Fisika</item>
        <item>Pendidikan Teknologi Informasi</item>
        <item>Pendidikan Biologi</item>
    </string-array>

    <string name="pertama">Ini adalah desain pertama di Android</string>
    <string name="pesan">Tuliskan pesan anda disini</string>
    <string name="tombol1">Tekan</string>
    <string name="tombol2">Lepas</string>
    <string name="cb1">Pilihan 1</string>
    <string name="cb2">Pilihan 2</string>
    <string name="jk1">Laki-laki</string>
    <string name="jk2">Perempuan</string>

    <string name="kepada">Kepada</string>
    <string name="subyek">Subyek</string>
    <string name="isi">Isi Pesan</string>
    <string name="kirim">Kirim</string>

    <string name="copyright">Created by Nurhafidzah Salsabila \n IKIP PGRI Pontianak</string>
    <string name="username">Masukkan Nama Anda</string>
</resources>